- Implemented: MySensors, S_POWER, Reactive power: volt-ampere reactive (var)
- Implemented: MySensors, S_POWER, Apparent power: volt-ampere (VA)
- Implemented: MySensors, S_POWER, Ratio of real power to apparent power: floating point value in the range [-1,..,1]
- Implemented: Nefit Easy, User Mode (as switch, On=Clock, Off=Manual), Flow Temperature, Hot Water Mode
- Implemented: OpenZWave, Aeotec ZWave+ USB Controller, Enable/Disable blinking mode (@Schmart, Thanks for the magic codes!)
- Implemented: OpenZWave, Node table, now also displays Manufacturer, Product ID and Product Type
- Implemented: OpenZWave, When including Thermostat Setpoints, the zwave Label will be used as Name by default
- Implemented: RFXMeter, Option to specify meter offset
- Implemented: P1 Electra Report, Now also displaying the counters for Return
- Implemented: RFLink: Displaying firmware version in the hardware setup
- Implemented: RFXCom, Blinds T12 (Confexx)
- Implemented: S0 Meter TCP
- Changed: Local I2C sensors grouping (ldrolez)
- Changed: ETH-8020, ignoring return message as it always returns (no more Success message)
- Changed: EventSystem, weather/rain value is now the rain-rate
- Changed: Forecast.io to DarkSky
- Changed: OpenZWave, Better support for Thermostat Modes
- Changed: Stable ID generation for Philips Hue scenes (you need to delete all scenes and restart the hue hardware or domoticz)
- Changed: TE923, Rain counter devided by 2
- Changed: Waterflow sensor, now uses Node+Child as ID (for example 0x0801)
- Changed: Wind Direction graph (now does not display directions when speed was equal to zero)
- Fixed: Better handling of white listed commands/urls
- Fixed: Blockly, fixed extra quote when setting a user variable string value
- Fixed: Database backup is now only possible for admin users
- Fixed: Double checking command rights
- Fixed: Dummy, Creating a new sensor always used the same id
- Fixed: Dummy, when new sensor is created, Add it to the EventSystem